modify setup.sql
