# golang/internal/docs/swagger.json
@@ -41,7 +41,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server.Titles"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/server.Titles"
+                            }
                         }
                     }
                 }
@@ -156,14 +159,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "article"
+                    "db"
                 ],
                 "summary": "全ての記事のデータを返す",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server.Article"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/server.Article"
+                            }
                         }
                     }
                 }
